 - Fix: Abandoned planets' build queues are now cancelled.
 - Fix: Fissure medal when you cause a fissure with BHG.
 - Fix: Training and Propaganda pays attention to the clock.
 - Cht: /wiki replaces spaces with + so you can search for multiple words.
 - Cht: /planet is more forgiving for new players to use.
 - Fix: Renaming a planet changes top-right planet name.

3.0917:
 - Fix: Recalc stats when building 1+x plans.
 - Fix: Station incoming shows your incoming as own, not station owner's incoming.
 - Fix: Better input validation for fleet.
 - Fix: On flip, remove any excavator sites.
 - UI : SST list only shows valid SST targets.
 - Fix: Duck quacking now shows RPC updates in UI. (API change.)
 - UI : Scow images updated (thanks Husky).
 - Fix: Remove item from SST trade now shows proper hold size requirement.
 - UI : Add propaganda boost to the happy popup (spy icon).
 - UI : Promotional events show up during the event.
 - Mod: AI spies get easy jobs their first shift.

3.0916:
 - Mod: Jackpot enhanced.
 - Fix: If parliament missing, better error handling.
 - Fix: Make sure scows display empty cargo on return.
 - Mod: Reduce some red tape.
 - Fix: Deployed bleeders shouldn't get subbed.
 - Fix: Destroying IBS removes all influence.
 - Fix: AIs' stations can now be destroyed.
 - Fix: Make owner of star a bit more predictable in case of ties.
 - Fix: Gauntlet now works at uni+1 level, too.
 - Fix: Saben will destroy planets with a bit more randomness.
 - Mod: Can stake your own stake.
 - Mod: Show plans in SSL in a predictable order (sorted!).

3.0915:
 - Fix: Reduce the wild resource fluctuations during planet ticking.
 - Mod: Evein plans get an extra 5 days start time for building.
 - Add: Lacuna promotions.
 - Add: Orbits as BHG targets.
 - UI : Add build-boost-from-happy to happy popup.
 - Add: Fingerprinting browsers.
 - UI : Essentia panel redone.
 - Mod: Better packaging for plans using flat boxes. (1,000 space used instead of 10,000)

3.0914: